--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cinemapedia">
+    package="com.example.flutter_tmdb">
    <application
-        android:label="cinemapedia"
+        android:label="Flutter TMDB"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
