--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: cinemapedia
-description: A new Flutter project.
+name: flutter_tmdb
+description: Flutter app for movies discovery using The Movie Database (TMDB) API.
 publish_to: 'none'
 version: 0.1.0
 
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   animate_do: ^3.0.2
-  card_swiper: ^2.0.4
+  card_swiper: ^3.0.1
   dio: ^5.0.0
   flutter:
     sdk: flutter
